--- a/dashboard/Chart.yaml
+++ b/dashboard/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: Chartmuseum
-name: chartmuseum
+description: Dashboard chart
+name: dashboard
 version: 1.0
