--- a/dashboard/templates/dashboard-ingress.yaml
+++ b/dashboard/templates/dashboard-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
 spec:
   rules:
-  - host: minikube.net
+  - host: {{ .Values.wildcard_domain_name }}
     http:
       paths:
       - path: /
