--- a/sealed-secrets/templates/controller.yaml
+++ b/sealed-secrets/templates/controller.yaml
@@ -108,7 +108,7 @@ metadata:
   name: sealed-secrets-controller
   namespace: kube-system
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations: {}
