--- a/dashboard/templates/dashboard-ingress.yaml
+++ b/dashboard/templates/dashboard-ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: dashboard
+  namespace: weave
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
 spec:
